tests/lazy_node_modules/lazy_node_modules.exp
Error: node_modules/foo/index.js:3
  3: var x: string = 123; // This error shows up since this file is a dependency
                     ^^^ number. This type is incompatible with
  3: var x: string = 123; // This error shows up since this file is a dependency
            ^^^^^^ string


Found 1 error
